# fwordlesolver-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  db.sqlite3  generate_openapi_spec.py  healthcheck.py  log_config.yaml  manage.py  openapi.json  openapi_spec.json  openapi_spec.yaml  pyproject.toml  server.py
.github/workflows/: publish.yml
api/: settings.py
fastapi_app/: main.py  schemas.py
fwordlesolver_api/: Dockerfile  api.py  settings.py  urls.py
test/: test_urls.py
tests/: test_main.py
