[project]
name = "fwordlesolver_api"
version = "1.0.1"
requires-python = ">=3.12"
dependencies = [
    "fwordlesolver (>=0.4.7,<0.5.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "fastapi (>=0.111.0,<0.112.0)",
    "uvicorn (>=0.30.1,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
pre-commit = "^4.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^4.1.0"
pre-commit = "^4.3.0"
