[project]
name = "fwordlesolver_api"
version = "1.1.1"
requires-python = ">=3.12"
dependencies = [
    "fwordlesolver>=0.4.7,<0.5.0",
    "whitenoise>=6.9.0,<7.0.0",
    "fastapi>=0.111.0,<0.112.0",
    "uvicorn>=0.30.1,<0.31.0",
    "ruff>=0.9.4",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_app"]
